[package]
name = "CF_S"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version ="*",features = ["json"] }
serde_json = "*"
tokio = {version ="*",features = ["full"] }
scraper = "*"
serde_derive = {version ="*"}
toml = "*"
serde = { version = "*", features = ["derive"] }
lazy_static = "*"